--- a/source/scss/blocks/hello.scss
+++ b/source/scss/blocks/hello.scss
@@ -20,7 +20,6 @@
     opacity: 0;
     pointer-events: none;
     transform: translateY(-100%) scale(0);
-    // border-radius: 0 0 50% 50%;
     border-radius: 50%;
   }
 
@@ -43,18 +42,18 @@
   z-index: 50;
   position: absolute;
   top: 0;
-  left: 90%;
+  left: calc(90 / 100 * 100vw);
   border: 0;
   background: transparent;
   transform: rotate(0) scale(0);
-  animation: wakeup 1s ease 2s alternate forwards;
+  animation: wakeup 1s ease 3s alternate both;
 
   svg {
     pointer-events: none;
-    animation: ticker 5s ease-out 2s 2 alternate forwards;
+    animation: ticker 4s ease-in-out 3s 1 alternate both;
     transform-origin: bottom center;
   }
-  @media (max-width: 500px) {
+  @media (max-width: 888px) {
     left: 0;
   }
 }
