--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -14,6 +14,7 @@
 @import "blocks/catalog.scss";
 @import "blocks/catalog-filter.scss";
 @import "blocks/promo.scss";
+@import "blocks/promo-text.scss";
 @import "blocks/github.scss";
 @import "blocks/skills.scss";
 @import "blocks/footer.scss";
