--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -719,68 +719,13 @@ h6 {
     justify-self: start; } }
 
 .header__logo svg {
-  fill: #62d0df; }
+  fill: #000000; }
 
 @media (max-width: 767.98px) {
   .header-menu__toggle {
     position: absolute;
     right: 20px;
     top: 10px; } }
-
-.site-list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center; }
-  @media (max-width: 767.98px) {
-    .site-list {
-      position: absolute;
-      top: 100%;
-      right: 0;
-      z-index: -1;
-      background-color: #d9f0f7;
-      visibility: hidden;
-      opacity: 0;
-      transform: translateY(100%) scale(0);
-      transition: transform 0.3s ease-out, opacity 0.3s ease-out; }
-      .site-list .site-list__item {
-        display: none; }
-      .site-list--open {
-        visibility: visible;
-        opacity: 1;
-        transform: translateY(0) scale(1);
-        background: rgba(127, 255, 0, 0.7);
-        z-index: 20;
-        width: -webkit-max-content;
-        width: -moz-max-content;
-        width: max-content;
-        max-width: 100px;
-        flex-direction: column;
-        text-align: center;
-        border-top-left-radius: 20px;
-        border-bottom-left-radius: 20px;
-        padding: 10px;
-        box-shadow: var(--box-shadow);
-        font-weight: 700;
-        text-transform: uppercase; }
-        .site-list--open .site-list__item {
-          margin: 0;
-          display: flex; }
-          .site-list--open .site-list__item:focus, .site-list--open .site-list__item:focus-visible, .site-list--open .site-list__item:focus-within {
-            outline: 1px solid black; } }
-
-.site-list__item {
-  margin-right: 9px;
-  display: flex; }
-  .site-list__item:last-child {
-    margin-right: 0; }
-
-.site-list__link {
-  padding: 5px;
-  font-size: 16px;
-  line-height: 19px;
-  color: black;
-  cursor: pointer; }
 
 .header-menu__actions {
   display: grid;
@@ -874,6 +819,58 @@ h6 {
           transform: translateY(7px) rotate(45deg); }
         .header-menu__toggle[aria-expanded="true"] .header-menu__icon::before {
           transform: translateY(-7px) rotate(-45deg); } }
+
+.site-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-items: flex-start; }
+  @media (min-width: 767.98px) {
+    .site-list {
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      -moz-column-gap: 34px;
+           column-gap: 34px;
+      row-gap: 10px; } }
+
+.site-list__link {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 35px;
+  text-transform: uppercase;
+  color: #ffffff; }
+  @media (min-width: 767.98px) {
+    .site-list__link {
+      font-size: 20px;
+      line-height: 20px; } }
+  .site-list__link:active {
+    color: rgba(255, 215, 75, 0.3); }
+
+@media (min-width: 1300px) {
+  .site-list__item {
+    overflow: hidden;
+    position: relative; }
+  .site-list__link:not(.site-list__link--active) {
+    position: relative; }
+    .site-list__link:not(.site-list__link--active):hover .site-list__link-text, .site-list__link:not(.site-list__link--active):focus .site-list__link-text, .site-list__link:not(.site-list__link--active):focus-within .site-list__link-text {
+      transform: translateY(-100%); }
+  .site-list__link-text {
+    display: inline-block;
+    position: relative;
+    transition: transform 0.3s; }
+    .site-list__link-text::before {
+      position: absolute;
+      top: 100%;
+      transform: translate3d(0, 0, 0);
+      white-space: nowrap;
+      color: #000000; }
+    .site-list__link-text--skills::before {
+      content: "навыки"; }
+    .site-list__link-text--catalog::before {
+      content: "каталог"; } }
 
 @media (min-width: 767.98px) {
   .catalog {
