--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/lucky.scss";
 @import "blocks/header.scss";
 @import "blocks/header-menu.scss";
+@import "blocks/site-list.scss";
 @import "blocks/catalog.scss";
 @import "blocks/catalog-filter.scss";
 @import "blocks/promo.scss";
