--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -7,7 +7,7 @@
   }
 
   @media (prefers-color-scheme: dark) {
-    background: #3a94a3;
+    background: #3a94a3 url("../img/decor-img-1.svg") no-repeat;
   }
   &.lock {
     overflow: hidden;
