--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ h6 {
 
 @media (prefers-color-scheme: dark) {
   .page {
-    background: #3a94a3; } }
+    background: #3a94a3 url("../img/decor-img-1.svg") no-repeat; } }
 
 .page.lock {
   overflow: hidden; }
@@ -636,8 +636,8 @@ h6 {
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   text-align: center;
   z-index: 50;
   font-size: clamp(50px, 10vw, 100px);
@@ -1193,6 +1193,21 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
     .promo {
       height: auto; } }
 
+.promo__promo-text {
+  position: relative;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none; }
+  @media (min-width: 767.98px) {
+    .promo__promo-text::after {
+      content: "";
+      position: absolute;
+      width: 5px;
+      height: 100%;
+      top: 0;
+      left: -8%;
+      background: black; } }
+
 .promo__container {
   display: grid;
   grid-template-columns: 1fr;
@@ -1260,7 +1275,9 @@ input[id="check-all"]:checked + label .icon-check-all__arrow {
   align-self: center; }
 
 input[name="profile"]:checked + .promo__btn {
-  box-shadow: 0 0 3px 0; }
+  box-shadow: 0 0 3px 0;
+  color: #ffffff;
+  background: #000; }
   input[name="profile"]:checked + .promo__btn span {
     transform: rotate(135deg); }
 
@@ -1268,14 +1285,15 @@ input[name="profile"]:checked ~ .rotate {
   transform: rotateX(180deg); }
 
 input[name="profile"]:focus + .promo__btn, input[name="profile"]:focus-visible + .promo__btn, input[name="profile"]:focus-within + .promo__btn {
-  box-shadow: 0 0 3px 0, 0 0 0 3px black; }
+  box-shadow: 0 0 3px 0, 0 0 0 3px #000; }
 
 .promo__btn {
   cursor: pointer;
   z-index: 5;
   width: 48px;
   height: 48px;
-  background: chartreuse;
+  background: #ffffff;
+  color: #000000;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -1286,7 +1304,7 @@ input[name="profile"]:focus + .promo__btn, input[name="profile"]:focus-visible +
   box-shadow: var(--box-shadow);
   transition: all 0.3s ease 0s; }
   .promo__btn span {
-    transition: all 0.3s ease-in-out 0s;
+    transition: transform 0.3s ease-in-out 0s;
     display: inline-block;
     font-size: 30px; }
   @media (min-width: 767.98px) {
