--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -182,7 +182,10 @@ h6 {
 
 @media (prefers-color-scheme: dark) {
   .page {
-    background: #3a94a3 url("../img/decor-img-1.svg") no-repeat; } }
+    background: #3a94a3;
+    background: #3a94a3 url("../img/decor-img-2.svg") no-repeat;
+    background-position: right top;
+    background-size: contain; } }
 
 .page.lock {
   overflow: hidden; }
