--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -12,6 +12,18 @@
   &.lock {
     overflow: hidden;
   }
+  // &::-webkit-scrollbar {
+  //   width: 10px;
+  // }
+  // &::-webkit-scrollbar-track {
+  //   background: red;
+  //   border-radius: 10px;
+  // }
+  // &::-webkit-scrollbar-thumb {
+
+  //   background: blue;
+  //   border-radius: 10px;
+  // }
 }
 
 .main-title {
