--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,6 +5,7 @@
 @import "main.scss";
 @import "container.scss";
 @import "animation.scss";
+@import "magick.scss";
 @import "waves.scss";
 @import "link-on-top.scss";
 @import "blocks/hello.scss";
