--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -1,5 +1,21 @@
 .header {
   position: relative;
+
+  @media (min-width: 1250px) {
+    &::after {
+      content: "";
+      width: 100%;
+      height: 450px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-image: url("../img/waves-bg.svg");
+      background-repeat: no-repeat;
+      z-index: -1;
+      background-size: cover;
+    }
+  }
 }
 
 .header__body {
@@ -14,7 +30,6 @@
     grid-template-columns: 1fr 3fr 1fr;
   }
 }
-
 
 .header__logo {
   @media (min-width: $width-desktop+px) {
