--- a/source/scss/blocks/promo-text.scss
+++ b/source/scss/blocks/promo-text.scss
@@ -18,3 +18,12 @@
   // text-transform: uppercase;
   font-size: clamp(16px, 2vw, 30px);
 }
+.promo-text__decs-typing-text {
+  font-weight: 900;
+  font-size: clamp(20px, 2vw, 30px);
+  text-shadow: 0 0 1px #fff;
+  @media (min-width: $width-desktop+px) {
+    color: #5155e5;
+    text-shadow: 0 0 3px #fff;
+  }
+}
