--- a/source/scss/blocks/skills.scss
+++ b/source/scss/blocks/skills.scss
@@ -1,6 +1,6 @@
 .skills {
   padding: 30px 0;
-  
+
 }
 
 .skills__change-text {
@@ -17,15 +17,13 @@
   grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
   gap: 20px;
   margin: 0 auto;
-  opacity: 0;
-  transform: skewX(315deg) translateX(-100%);
-  transition: all 0.5s ease-in-out 0s;
+
 
   @media (min-width: $width-tablet+px) {
     column-gap: 50px;
   }
 
-  &.magick {
+  &.magick--show {
     opacity: 1;
     transform: translateX(0);
 
