--- a/source/scss/link-on-top.scss
+++ b/source/scss/link-on-top.scss
@@ -51,6 +51,7 @@
     width: 100%;
     height: 100%;
     transition: width 0.3s ease, height 0.3s ease;
+    pointer-events: none;
   }
 
   @media (min-width: $width-mobile+px) {
