--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -16,6 +16,7 @@
     height: auto;
   }
 }
+
 .promo__promo-text {
   position: relative;
   user-select: none;
@@ -67,7 +68,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  backface-visibility: hidden;
   object-fit: cover;
   transition: all 0.5s ease 0s;
   border-radius: 50%;
@@ -176,7 +176,6 @@ input[name="profile"] {
   box-shadow: 0 0 10px 0 var(--opacity-black);
   border-radius: 50%;
   transform: rotateX(180deg);
-  backface-visibility: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -196,12 +195,13 @@ input[name="profile"] {
 }
 
 .rotate {
+  backface-visibility: hidden;
   z-index: 2;
   width: 250px;
   height: 250px;
   border-radius: 50%;
   transform-style: preserve-3d;
-  transition: all 0.6s ease 0s;
+  transition: transform 0.3s ease 0s;
 
   @media (min-width: $width-tablet+px) {
     width: 350px;
