--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -72,6 +72,7 @@
   transition: all 0.5s ease 0s;
   border-radius: 50%;
   box-shadow: var(--shadow);
+  pointer-events: none;
 }
 
 .promo__title {
@@ -166,16 +167,18 @@ input[name="profile"] {
 }
 
 .promo__contact {
+  transform: rotateX(180deg);
+  backface-visibility: hidden;
+
   transition: all 0.5s ease-in 0s;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #eaeaea8a;
+  background: linear-gradient(1deg, #897ded, #dbd2fa);
   box-shadow: 0 0 10px 0 var(--opacity-black);
   border-radius: 50%;
-  transform: rotateX(180deg);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -195,13 +198,13 @@ input[name="profile"] {
 }
 
 .rotate {
-  backface-visibility: hidden;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.3s ease 0s;
   z-index: 2;
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  transform-style: preserve-3d;
-  transition: transform 0.3s ease 0s;
 
   @media (min-width: $width-tablet+px) {
     width: 350px;
