--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -182,6 +182,7 @@ input[name="profile"] {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 
   .contacts__list {
     flex-direction: column;
